objects/CN_Promotion_Member__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Name__c</fullName>
        <formula>CN_Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promotion_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotion Members</relationshipLabel>
        <relationshipName>Promotion_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Category__c</fullName>
        <formula>TEXT(CN_Account__r.CN_Category__c)</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Channel__c</fullName>
        <formula>CN_Account__r.CN_Sales_Team_UI__r.Name</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Promotion_Planned__c</fullName>
        <formula>CN_Promotion_Status__c = &quot;Planned&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Promotion Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Description__c</fullName>
        <formula>CN_Promotion__r.CN_Description__c</formula>
        <label>Promotion Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_End_Date__c</fullName>
        <formula>CN_Promotion__r.CN_End_Date__c</formula>
        <label>Promotion End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Member_Name__c</fullName>
        <formula>CN_Account_Name__c &amp; &apos; &apos; &amp;  CN_Account__r.CN_Customer_Code__c &amp; &apos; &apos; &amp;  CN_Promotion__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Start_Date__c</fullName>
        <formula>CN_Promotion__r.CN_Start_Date__c</formula>
        <label>Promotion Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Status__c</fullName>
        <formula>TEXT(CN_Promotion__r.CN_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>CN_Promotion__c</referenceTo>
        <relationshipLabel>Promotion Members</relationshipLabel>
        <relationshipName>Promotion_Members2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Promotion Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{0000000000}</displayFormat>
        <label>Promotion Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Members</pluralLabel>
    <recordTypes>
        <fullName>CN_Promotion_Member</fullName>
        <active>true</active>
        <label>Promotion Member</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_Check_Create_Promotion_Member</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  ISNEW(),
  ISPICKVAL( CN_Promotion__r.CN_Status__c , &quot;Aborted&quot;) 
)</errorConditionFormula>
        <errorMessage>You are not allowed to add new promotion member while promotion is aborted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Change_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISCHANGED( CN_Account__c ),
NOT(ISNEW())
)</errorConditionFormula>
        <errorDisplayField>CN_Account__c</errorDisplayField>
        <errorMessage>It&apos;s not allow change Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Change_Promotion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISCHANGED(  CN_Promotion__c  ),
NOT(ISNEW())
)</errorConditionFormula>
        <errorDisplayField>CN_Account__c</errorDisplayField>
        <errorMessage>It&apos;s not allow change Promotion.</errorMessage>
    </validationRules>
</CustomObject>